--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo16v3",
   "version": "0.1.0",
   "private": true,
-  
+  "homepage": "https://markoff.github.io/todoMain",
   "dependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
@@ -17,9 +17,12 @@
     "@types/react-dom": "18.0.8",
     "@types/react-redux": "7.1.24",
     "axios": "1.1.3",
+    "formik": "^2.2.9",
+    "gh-pages": "^5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.4",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "redux": "4.2.0",
     "redux-thunk": "2.4.1",
@@ -27,6 +30,8 @@
     "web-vitals": "3.0.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
