--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "11.10.5",
     "@mui/icons-material": "5.10.9",
     "@mui/material": "5.10.11",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -16,6 +17,7 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "@types/react-redux": "7.1.24",
+    "@types/uuid": "^9.0.1",
     "axios": "1.1.3",
     "formik": "^2.2.9",
     "gh-pages": "^5.0.0",
